<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">zf_new_email</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_email">邮件</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="user_address">邮箱账号</string>
    <string name="done">完成</string>
    <string name="loging">登录中...</string>
    <string name="email_get">收件箱</string>
    <string name="arrow">></string>
    <string name="email_not_read">未读邮件</string>
    <string name="email_star">星标邮件</string>
    <string name="email_cao">草稿箱</string>
    <string name="email_send">已发送</string>
    <string name="email_delete">已删除</string>
    <string name="replay">回复</string>
    <string name="replay_all">回复全部</string>
    <string name="forward">转发</string>
    <string name="delete">删除</string>
    <string name="menu">菜单</string>
    <string name="settings">设置</string>
    <string name="email_getter">收件人:</string>
    <string name="email_sender">发件人:</string>
    <string name="email_subject">主    题:</string>
    <string name="number_of_attachment">个附件</string>
    <string name="other_attachment">以及其他%1$s个附件</string>
    <string name="open">打开</string>
    <string name="write_mail">写邮件</string>
    <string name="search">搜索</string>
    <string name="new_email">新邮件</string>
    <string name="email_chao">抄	送:</string>
    <string name="sending">发送中...</string>
    <string name="saving">保存中...</string>
    <string name="reply_mail">回复邮件</string>
    <string name="reply_all_mail">回复全部邮件</string>
    <string name="forward_mail">转发邮件</string>
    <string name="reply">回复:</string>
    <string name="forwards">转发:</string>
    <string name="leave_write_mail">离开写邮件</string>
    <string name="mail_draft_content">已填写的邮件内容将丢失，或保存至草稿</string>
    <string name="leave">离开</string>
    <string name="cancle">取消</string>
    <string name="save_draft">保存草稿</string>
    <string name="mark_read">标记已读</string>
    <string name="mark_un_read">标记未读</string>
    <string name="mark_star">添加星标</string>
    <string name="mark_un_star">取消星标</string>
    <string name="select_all">全选</string>
    <string name="cancle_select_all">取消全选</string>
    <string name="mark">标记</string>
    <string name="star">星标</string>
    <string name="sender">发件人</string>
    <string name="getter">收件人</string>
    <string name="subject">主题</string>
    <string name="all">全部</string>
    <string name="searching">搜索中...</string>
    <string name="no_mail">沒有相关的邮件!</string>
    <string name="select_contracts">选择联系人</string>
    <string name="add_contact">添加联系人</string>
    <string name="no_contracts">暂无联系人</string>
    <string name="reply_with_attachment">回复带附件</string>
    <string name="reply_all_with_attachment">回复全部带附件</string>
    <string name="forward_with_attachment">转发带附件</string>
    <string name="acccount_swiching">账号切换中...</string>
    <string name="delete_account">删除账号</string>
    <string name="add_account">添加新账号</string>
    <string name="login_hint">请使用授权码或者独立密码登录</string>
    <string name="login_error">登录失败</string>
    <string name="auth_code_error_hint">账号或密码错误，或未开启IMAP服务</string>
    <string name="open_imap">如何开启IMAP</string>
    <string name="open_imap_service">开启IMAP服务</string>
    <string name="account_switch_failure">账号切换失败!</string>
    <string name="mark_sure_down_load_attachment">确认要下载附件吗?</string>
    <string name="ok">确认</string>
    <string name="attachment_down_load">附件下载</string>
    <string name="attachment_is_downloading">正在下载附件...</string>
    <string name="down_loading">下载中...</string>
    <string name="input_email_content">请输入邮件内容</string>
    <string name="loading">正在加载...</string>
    <string name="loading_again">点击屏幕重新加载</string>
    <string name="attachment_is_too_big">附件应该小于10M!</string>

</resources>