<?xml version="1.0" encoding="utf-8"?>
<com.zfsoft.zf_new_email.widget.scrollview.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/email_detail_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white" >

    <LinearLayout
        android:id="@+id/email_detail_linears"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/email_detail_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/email_check_edit_margin"
            android:paddingTop="@dimen/email_check_edit_margin" >

            <TextView
                android:id="@+id/email_detail_getters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/email_check_edit_padding"
                android:text="@string/email_getter"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_small" />

            <TextView
                android:id="@+id/email_detail_getter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:singleLine="true"
                android:textSize="@dimen/font_small" />
        </LinearLayout>

        <View
            android:id="@+id/email_detials"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@color/color_grayer" />

        <RelativeLayout
            android:id="@+id/email_detail_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/email_check_edit_margin"
            android:paddingTop="@dimen/email_check_edit_margin" >

            <TextView
                android:id="@+id/email_detail_subj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/email_check_edit_padding"
                android:text="@string/email_subject"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_small" />

            <TextView
                android:id="@+id/email_detail_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@id/email_detail_subj"
                android:singleLine="true"
                android:textSize="@dimen/font_small" />

            <TextView
                android:id="@+id/email_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/email_detail_subj"
                android:layout_below="@id/email_detail_subj"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_smaller" />
        </RelativeLayout>

        <View
            android:id="@+id/email_detail_vi"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@color/color_grayer" />

        <LinearLayout
            android:id="@+id/email_detail_attachments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_email_list_margin"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/email_detail_rela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/email_check_edit_margin"
                android:paddingTop="@dimen/email_check_edit_margin" >

                <ImageView
                    android:id="@+id/email_detail_attachment_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item_mail_list_attachment" />

                <TextView
                    android:id="@+id/email_detail_attachment_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/email_check_edit_padding"
                    android:layout_toRightOf="@id/email_detail_attachment_icon"
                    android:textSize="@dimen/font_smaller" />

                <TextView
                    android:id="@+id/email_detail_attachment_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/email_check_edit_padding"
                    android:layout_toRightOf="@id/email_detail_attachment_number"
                    android:textSize="@dimen/font_smaller" />

                <ImageView
                    android:id="@+id/email_detail_attachment_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item_mail_list_attachment"
                    android:tag="0" />
            </RelativeLayout>

            <View
                android:id="@+id/email_detail_views"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/color_grayer" />
        </LinearLayout>

        <ListView
            android:id="@+id/email_detail_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/color_white"
            android:dividerHeight="@dimen/item_email_list_margin"
            android:listSelector="@drawable/list_item_selector" >
        </ListView>

        <TextView
            android:id="@+id/email_detail_other_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/email_check_edit_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/email_check_edit_margin"
            android:textColor="@color/color_bule"
            android:textSize="@dimen/font_smaller"
            android:visibility="gone" />

        <View
            android:id="@+id/email_detail_view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@color/color_grayer" />

        <View
            android:id="@+id/email_detail_view_attachment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginBottom="@dimen/item_email_list_margin"
            android:layout_marginTop="@dimen/item_email_list_margin"
            android:background="@color/color_grayer"
            android:visibility="gone" />

        <TextView
            android:id="@+id/email_detail_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:padding="@dimen/item_email_list_margin"
            android:textSize="@dimen/font_small" />

        <WebView
            android:id="@+id/email_detail_content_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:scrollbars="none"
            android:visibility="gone" />
    </LinearLayout>

</com.zfsoft.zf_new_email.widget.scrollview.CustomScrollView>